Search Feature done

--- a/app/src/main/res/layout/fragment_movies.xml
+++ b/app/src/main/res/layout/fragment_movies.xml
@@ -13,14 +13,25 @@
         android:visibility="gone"
         />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyler_movies"
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginStart="@dimen/horizontal_margin"
-        android:layout_marginEnd="@dimen/horizontal_margin"
-        tools:listitem="@layout/movies_item"
-        android:dividerHeight="10.0sp"
-    />
+        android:layout_height="match_parent">
 
+        <com.quinny898.library.persistentsearch.SearchBox
+            android:id="@+id/search_movie"
+            android:layout_marginBottom="16dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyler_movies"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/activity_horizontal_margin"
+            android:layout_marginStart="@dimen/horizontal_margin"
+            android:layout_marginEnd="@dimen/horizontal_margin"
+            android:dividerHeight="10.0sp"
+            tools:listitem="@layout/movies_item" />
+    </LinearLayout>
 </FrameLayout>
