--- a/app/src/main/res/layout/fragment_tvshows.xml
+++ b/app/src/main/res/layout/fragment_tvshows.xml
@@ -12,14 +12,26 @@
         android:layout_gravity="center"
         android:visibility="gone"
         />
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyler_tv"
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginStart="@dimen/horizontal_margin"
-        android:layout_marginEnd="@dimen/horizontal_margin"
-        tools:listitem="@layout/tv_show_item"
-        android:dividerHeight="10.0sp"
-        />
+        android:layout_height="match_parent">
+
+        <com.quinny898.library.persistentsearch.SearchBox
+            android:id="@+id/search_tv"
+            android:layout_marginBottom="16dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyler_tv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="@dimen/horizontal_margin"
+            android:layout_marginEnd="@dimen/horizontal_margin"
+            tools:listitem="@layout/tv_show_item"
+            android:dividerHeight="10.0sp"
+            />
+
+    </LinearLayout>
 </FrameLayout>
