--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,16 +25,6 @@
             app:tabTextColor="@android:color/white"
             app:layout_constraintTop_toTopOf="parent"/>
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/viewPager_main"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tab_menu_main"
-            android:layout_marginTop="0dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tab_menu_main" />
-
         <TextView
             android:id="@+id/no_connection"
             android:layout_width="match_parent"
@@ -45,6 +35,28 @@
             android:gravity="center"
             android:visibility="gone"
             />
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <android.support.v4.view.ViewPager
+                android:id="@+id/viewPager_main"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tab_menu_main"
+                android:layout_marginTop="0dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tab_menu_main" />
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/fab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end|bottom"
+                android:src="@drawable/ic_settings_black_24dp"
+                android:layout_margin="16dp" />
+        </FrameLayout>
     </RelativeLayout>
 
     <android.support.design.widget.NavigationView
